feat(v2.8): 兼容性稳定性补强
- --monitor 心跳机制（值守确认存活）
- webhook 推送重试（指数退避防丢告警）
- hprof 流式解析（大堆 1GB+ 兼容）
- AiClient 5xx/429 自动重试
- NetworkAnalyzer Windows netstat 支持
- RuleUpdater 版本缓存（一致跳过下载）